--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Header -->
             <header class="header">
                 <div class="header-content">
-                    <h1 class="logo">🎮 Steam Life</h1>
+                    <h1 class="logo">🎮 Conquest Life</h1>
                     <div class="header-stats">
                         <div class="stat-item">
                             <span class="stat-label">Conquistas Desbloqueadas</span>
