--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
                             <span class="stat-value" id="totalPoints">0</span>
                         </div>
                     </div>
+                    <div id="authArea" class="auth-area">
+                        <button id="loginBtn" class="auth-btn">Entrar</button>
+                        <button id="logoutBtn" class="auth-btn" hidden>Sair</button>
+                        <span id="userEmail" class="user-email"></span>
+                        <span id="syncStatus" class="sync-status" aria-hidden="true"></span>
+                    </div>
                 </div>
             </header>
 
@@ -92,12 +98,36 @@
             <section class="actions-section">
                 <button class="action-btn unlock-btn" id="unlockRandomBtn">Desbloquear Conquista Aleatória</button>
                 <button class="action-btn reset-btn" id="resetBtn">Resetar Todas as Conquistas</button>
+                <button class="action-btn migrate-btn" id="migrateBtn"
+                    title="Migrar progresso local para o servidor">Migrar Progresso</button>
             </section>
         </div>
     </div>
 
     <!-- Notification Toast -->
     <div class="toast" id="toast"></div>
+
+    <!-- Login Modal -->
+    <div id="loginModal" class="modal hidden">
+        <div class="modal-content">
+            <h3>Entrar com Google</h3>
+            <p>Faça login com sua conta Google para sincronizar suas conquistas.</p>
+            <div class="modal-actions">
+                <button id="googleSignInBtn" class="auth-btn google">Entrar com Google</button>
+                <button id="closeLoginBtn" class="auth-btn">Fechar</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Firebase CDN (compat build) - replace with modular imports if switching to ESM -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-functions-compat.js"></script>
+
+    <!-- Firebase config example (copy to data/firebase-config.js and replace keys) -->
+    <script src="data/firebase-config.example.js"></script>
+    <script src="firebase-service.js"></script>
 
     <script src="script.js"></script>
 </body>
