--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <h2>Áreas</h2>
+                <h2>Menu</h2>
             </div>
             <nav class="areas-nav" id="areasNav">
                 <!-- Áreas serão renderizadas aqui -->
             </nav>
+            <div class="sidebar-separator"></div>
+            <button class="area-btn friends-nav-btn" id="friendsNavBtn" style="display:none;">
+                <span class="area-icon">👥</span>
+                <span class="area-info">
+                    <span class="area-name">Amigos</span>
+                </span>
+            </button>
         </aside>
 
         <div class="container">
@@ -81,7 +88,7 @@
             </section>
 
             <!-- Achievements Section -->
-            <section class="achievements-section">
+            <section class="achievements-section" id="achievementsView">
                 <h2>Suas Conquistas</h2>
                 <div class="filters">
                     <button class="filter-btn active" data-filter="todas">Todas</button>
@@ -95,11 +102,40 @@
             </section>
 
             <!-- Actions Section -->
-            <section class="actions-section">
+            <section class="actions-section" id="actionsView">
                 <button class="action-btn unlock-btn" id="unlockRandomBtn">Desbloquear Conquista Aleatória</button>
                 <button class="action-btn reset-btn" id="resetBtn">Resetar Todas as Conquistas</button>
-                <button class="action-btn migrate-btn" id="migrateBtn"
-                    title="Migrar progresso local para o servidor">Migrar Progresso</button>
+            </section>
+
+            <!-- Friends Page (hidden by default) -->
+            <section class="friends-page hidden" id="friendsPage">
+                <div class="friends-page-header">
+                    <h2>Amigos</h2>
+
+                </div>
+                <div class="friends-page-container">
+                    <div class="friends-search-section">
+                        <h3>Buscar Amigos</h3>
+                        <div class="friend-search">
+                            <input type="text" id="friendSearch" placeholder="Buscar por nome...">
+                            <button id="friendSearchBtn" class="action-btn">Buscar</button>
+                        </div>
+                        <div id="friendSearchHint" class="friend-search-hint hidden">Faça login para pesquisar por
+                            amigos.</div>
+                        <div class="friends-list-container">
+                            <div id="searchResults"></div>
+                            <div id="friendList"></div>
+                        </div>
+                    </div>
+                    <div class="friends-requests-section">
+                        <h3>Solicitações Pendentes</h3>
+                        <div id="friendRequestsList"></div>
+                    </div>
+                </div>
+                <div class="friend-profile-section">
+                    <h3>Perfil do Amigo</h3>
+                    <div id="friendProfileContent">Selecione um amigo para ver as conquistas desbloqueadas.</div>
+                </div>
             </section>
         </div>
     </div>
@@ -115,6 +151,19 @@
             <div class="modal-actions">
                 <button id="googleSignInBtn" class="auth-btn google">Entrar com Google</button>
                 <button id="closeLoginBtn" class="auth-btn">Fechar</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Set Display Name Modal -->
+    <div id="setNameModal" class="modal hidden">
+        <div class="modal-content">
+            <h3>Defina seu nome</h3>
+            <p>Defina um nome público para que amigos possam encontrar você.</p>
+            <input id="displayNameInput" type="text" placeholder="Nome público...">
+            <div class="modal-actions">
+                <button id="saveNameBtn" class="auth-btn">Salvar</button>
+                <button id="closeNameBtn" class="auth-btn">Fechar</button>
             </div>
         </div>
     </div>
