Ocultação das keys

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-functions-compat.js"></script>
 
     <!-- Firebase config example (copy to data/firebase-config.js and replace keys) -->
-    <script src="data/firebase-config.example.js"></script>
+    <script src="data/firebase-config.js"></script>
     <script src="firebase-service.js"></script>
 
     <script src="script.js"></script>
