--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steam Life - Conquistas</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -154,7 +154,7 @@
             <h3>Entrar com Google</h3>
             <p>Faça login com sua conta Google para sincronizar suas conquistas.</p>
             <div class="modal-actions">
-                <button id="googleSignInBtn" class="auth-btn google">Entrar com Google</button>
+                <button id="googleSignInBtn" class="auth-btn google"><i class="fa fa-google" aria-hidden="true"></i> Entrar com Google</button>
                 <button id="closeLoginBtn" class="auth-btn">Fechar</button>
             </div>
         </div>
