--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     <!-- Login Modal -->
     <div id="loginModal" class="modal hidden">
         <div class="modal-content">
+            <button id="loginModalCloseX" class="modal-close-x" aria-label="Fechar">×</button>
             <h3>Entrar com Google</h3>
             <p>Faça login com sua conta Google para sincronizar suas conquistas.</p>
             <div class="modal-actions">
