--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                     <button class="filter-btn active" data-filter="todas">Todas</button>
                     <button class="filter-btn" data-filter="desbloqueadas">Desbloqueadas</button>
                     <button class="filter-btn" data-filter="bloqueadas">Bloqueadas</button>
+                    <div class="search-wrap">
+                        <input id="achievementSearch" type="search" placeholder="Pesquisar conquistas..." aria-label="Pesquisar conquistas">
+                        <button id="clearAchievementSearch" class="clear-search" title="Limpar pesquisa">✕</button>
+                    </div>
                 </div>
 
                 <div class="achievements-grid" id="achievementsGrid">
